Refactoring code gen.  Not fully working.